# Chess

./: CMakeLists.txt  README.md
include/: .gitignore  Board.hpp  BoardEvent.hpp  Chess.hpp  Menu.hpp  Piece.hpp  PieceMovement.hpp
src/: Board.cpp  BoardEvent.cpp  Chess.cpp  Piece.cpp  PieceMovement.cpp  main.cpp
src/main/: main.cpp
src/main/game/: BoardEvent.cpp  Piece.cpp
src/main/menu/: Menu.cpp
